nginx.conf ciphers changed

--- a/style.css
+++ b/style.css
@@ -115,6 +115,12 @@ html, body
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #drop_zone_drag
